--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
-    <string name="app_name">Kaler Kontho</string>
+    <string name="app_name">কালের কন্ঠ</string>
+    <string name="action_settings">Settings</string>
+    <string name="home">হোম</string>
+    <string name="latest_news">সর্বশে  সংবাদ</string>
+    <string name="top_news">শীষ সংবাদ</string>
+    <string name="most_views_news">সকল সংবাদ</string>
+    <string name="first_page"> প্রথম পাতা </string>
+    <string name="last_page"> শেষের পাতা </string>
+    <string name="special_news"> স্পেশাল নিউজ </string>
+    <string name="others_news">ভিন্ন ধরনের খবর </string>
+    <string name="bibid"> বিবিধ </string>
+
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
