--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="home">হোম</string>
     <string name="latest_news">সর্বশে  সংবাদ</string>
-    <string name="top_news">শীষ সংবাদ</string>
+    <string name="top_news">শীর্ষ সংবাদ</string>
     <string name="most_views_news">সকল সংবাদ</string>
     <string name="first_page"> প্রথম পাতা </string>
     <string name="last_page"> শেষের পাতা </string>
