--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,8 @@
     <string name="subjectplus">বিষয় যোগ করে তৈরি কর \nতোমার সংবাদ!</string>
     <string name="seehere">তোমার পছন্দের সর্বশেষ সংবাদগুলো এখানে\nদেখতে পাবে।</string>
     <string name="letsgoo">চলো শুরু করি!!!</string>
+    <string name="likesubject">পছন্দের বিষয়</string>
+    <string name="subjectselect">বিষয় নির্বাচন</string>
 
 
 
