--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="details">বিস্তারিত</string>
+    <string name="details">বিস্তারিত</string>ফেবোরাইট
+    <string name="favorite">ফেবোরাইট</string>
 </resources>
