--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
     <string name="detailss">বিস্তারিত লিখুন</string>
     <string name="motamot">মতামত</string>
     <string name="thanks">আপনার মূল্যবান মতামতের জন্য ধন্যবাদ!!!</string>
+    <string name="catlist">ক্যাটাগরি তালিকা</string>
 
 
 
