--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,9 @@
     <string name="subject">বিষয়</string>
     <string name="detailss">বিস্তারিত লিখুন</string>
     <string name="motamot">মতামত</string>
+    <string name="comment">মন্তব্য </string>
+    <string name="comment_please">মন্তব্য করুন </string>
+
     <string name="thanks">আপনার মূল্যবান মতামতের জন্য ধন্যবাদ!!!</string>
     <string name="catlist">ক্যাটাগরি তালিকা</string>
 
