--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">কালের কন্ঠ</string>
-    <string name="pretex_details">I saw this on the Kalerkontho App and thought you should see it:\n</string>
+    <string name="pretex_details">I saw this on the Kalerkontho App and thought you should see it:\n\n</string>
 
     <string name="action_settings">Settings</string>
     <string name="home">হোম</string>
