Comment list add and write comment done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,7 +69,7 @@
     <string name="comment_please">মন্তব্য করুন </string>
     <string name="write_comment">মন্তব্য লিখুন ... </string>
     <string name="write_comment_pleas">দয়াকরে মন্তব্য লিখুন</string>
-
+    <string name="comment_succes">আপনার মূল্যবান মন্তব্যের জন্য ধন্যবাদ !!!</string>
     <string name="thanks">আপনার মূল্যবান মতামতের জন্য ধন্যবাদ!!!</string>
     <string name="catlist">ক্যাটাগরি তালিকা</string>
 
