--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="enter">প্রবেশ করুন</string>
     <string name="login">লগইন</string>
     <string name="login_first">মতামত দিতে লগইন করুন </string>
+    <string name="login_first_comment">মন্তব্য দিতে লগইন করুন </string>
     <string name="provide_subject">দয়াকরে বিষয় লিখুন</string>
     <string name="provide_details">দয়াকরে বিস্তারিত লিখুন</string>
     <string name="provide_name">দয়াকরে নাম লিখুন</string>
