--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,15 @@
     <string name="catlist">ক্যাটাগরি তালিকা</string>
 
 
+
+
     <string name="follow">ফলো</string>
+
+
+    <string name="refresh">রিফ্রেশ সাইট</string>
+    <string name="setting">সেটিং</string>
+    <string name="helps">হেল্প</string>
+    <string name="feedback">ফীডব্যাক পাঠাও</string>
 
 
 
